tests = [
	'test-bashrc',
	'test-color',
	'test-complex-depend',
	'test-config',
	'test-depend-over-rdepend',
	'test-extra',
	'test-help',
	'test-missing-bind',
	'test-missing-depend',
	'test-missing-slot',
	'test-missing-slotbind',
	'test-no-needed',
	'test-output',
	'test-overbind',
	'test-shellcheck',
	'test-uninstalled',
	'test-version',
	'test-virtual'
]
